iptables.rules
# Generated by iptables-save v1.4.21 on Wed Feb  9 20:59:24 2022
*nat
:PREROUTING ACCEPT [37:2325]
:INPUT ACCEPT [27:1657]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [2:104]
-A PREROUTING -p tcp -m tcp --dport 2211 -j DNAT --to-destination 10.0.1.11:22
-A PREROUTING -p tcp -m tcp --dport 2212 -j DNAT --to-destination 10.0.1.12:22
# -A PREROUTING -p tcp -m tcp --dport 2213 -j DNAT --to-destination 10.0.1.13:22
-A PREROUTING -p tcp -m tcp --dport 2221 -j DNAT --to-destination 10.0.1.21:22
-A PREROUTING -p tcp -m tcp --dport 9090 -j DNAT --to-destination 10.0.1.21:9090
-A PREROUTING -p tcp -m tcp --dport 9100 -j DNAT --to-destination 10.0.1.21:9100
-A PREROUTING -p tcp -m tcp --dport 3000 -j DNAT --to-destination 10.0.1.21:3000
-A PREROUTING -p tcp -m tcp --dport 2222 -j DNAT --to-destination 10.0.1.22:22
-A POSTROUTING -o enp0s3 -j SNAT --to-source 192.168.43.32
COMMIT
# Completed on Wed Feb  9 20:59:24 2022
# Generated by iptables-save v1.4.21 on Wed Feb  9 20:59:24 2022
*filter
:INPUT ACCEPT [794:55080]
:FORWARD ACCEPT [575:53811]
:OUTPUT ACCEPT [401:36354]
COMMIT
# Completed on Wed Feb  9 20:59:24 2022
